--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -117,3 +117,5 @@ $dropdown-link-hover-color: $white;
 $dropdown-link-hover-bg: $primary;
 
 $drawer-height: 140px !default;
+
+$imt-header-height: 312px !default;
